3rd-air-champion-frontend/src/styles/calendarStyle.css
@import "tailwindcss";

.react-calendar__month-view__weekdays {
  display: none !important;
}

/* .react-calendar__custom_tile {
  @apply hover:bg-slate-500 border-gray-300 grid grid-rows-4 mb-1 max-h-[120px] max-w-full overflow-hidden;
} */

.react-calendar__custom_tile {
  --max-rows: 4;
  --tw-border-opacity: 1;
  border-color: rgb(
    209 213 219 / var(--tw-border-opacity, 1)
  ); /* #d1d5db, corresponds to border-gray-300 */
  display: grid; /* corresponds to grid */
  grid-template-rows: repeat(
    var(--max-rows),
    minmax(0, 1fr)
  ); /* corresponds to grid-rows-4 */
  margin-bottom: 0.25rem; /* corresponds to mb-1 */
  max-height: 120px; /* corresponds to max-h-[120px] */
  max-width: 100%; /* corresponds to max-w-full */
  overflow: visible !important;
}

.react-calendar__custom_tile:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(
    100 116 139 / var(--tw-bg-opacity, 1)
  ); /* #64748b, corresponds to hover:bg-slate-500 */
}

.react-calendar__custom_tile > abbr {
  font-size: 0.75rem;
}

.react-calendar__custom_tile_today {
  border-width: 1px !important;
  position: relative;
}

.react-calendar__custom_tile_today::after {
  content: "";
  position: absolute;
  inset: 0;
  border: 5px solid rgb(15 23 42); /* #0f172a slate-950 */
  border-radius: 0.625rem /* 10px */;
  pointer-events: none;
  z-index: 10;
}

.react-calendar__custom_tile_blocked {
  @apply bg-slate-700;
}

.react-calendar__custom_tile_full {
}

.react-calendar__custom_tile_paid {
  @apply bg-green-400;
}

/* Base styling for tiles without bookings */
.react-calendar__custom_tile_no_booking {
  @apply border;
}

/* Base styles for tiles with bookings */
.react-calendar__custom_tile_booking {
  @apply border-y;
}

/* Start date styles */
.react-calendar__custom_tile_booking_start {
  @apply border-l;
}

/* End date styles */
.react-calendar__custom_tile_booking_end {
  @apply border-r;
}

/* In-between styles */
.react-calendar__custom_tile_booking_between {
  @apply border-x-0;
}

